--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,13 @@ readme = "README.md"
 packages = [{include = "app"}]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.11,<3.13"
 fastapi = "^0.124.0"
 uvicorn = {extras = ["standard"], version = "^0.38.0"}
-langchain = "^0.2.0"
+langchain = "^0.3.0"
 langchain-openai = "^0.2.0"
-langchain-community = "^0.2.0"
-langchain-pinecone = "^0.1.0"
+langchain-community = "^0.3.0"
+langchain-text-splitters = "^0.3.0"
 pinecone-client = "^5.0.0"
 python-dotenv = "^1.0.0"
 pydantic = "^2.7.0"
@@ -25,11 +25,12 @@ psycopg2-binary = "^2.9.0"
 alembic = "^1.13.0"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+bcrypt = "^4.0.0"
 python-multipart = "^0.0.9"
 beautifulsoup4 = "^4.12.0"
 lxml = "^5.0.0"
 pypdf = "^4.0.0"
-unstructured = "^0.12.0"
+# unstructured = "^0.12.0"  # Optional - doesn't support Python 3.12 yet
 structlog = "^24.1.0"
 
 [tool.poetry.group.dev.dependencies]
