--- a/env.example
+++ b/env.example
@@ -7,5 +7,10 @@ OPENAI_API_BASE=""
 OPENAI_MODEL="gpt-4o-mini"
 OPENAI_EMBEDDING_MODEL="text-embedding-3-small"
 CHROMA_PERSIST_DIRECTORY="./data/chroma"
+CHROMA_COLLECTION_NAME="bplus-rag"
+# Optional: set these to use Chroma Cloud, otherwise local persistence is used
+# CHROMA_API_KEY=""
+# CHROMA_TENANT=""
+# CHROMA_DATABASE=""
 DATA_DIRECTORY="./data/documents"
 LOG_LEVEL="INFO"
