--- a/env.example
+++ b/env.example
@@ -6,11 +6,9 @@ OPENAI_API_KEY="sk-please-set-me"
 OPENAI_API_BASE=""
 OPENAI_MODEL="gpt-4o-mini"
 OPENAI_EMBEDDING_MODEL="text-embedding-3-small"
-CHROMA_PERSIST_DIRECTORY="./data/chroma"
-CHROMA_COLLECTION_NAME="bplus-rag"
-# Optional: set these to use Chroma Cloud, otherwise local persistence is used
-# CHROMA_API_KEY=""
-# CHROMA_TENANT=""
-# CHROMA_DATABASE=""
+PINECONE_API_KEY=""
+PINECONE_INDEX_NAME="bplus-rag"
+PINECONE_CLOUD="aws"
+PINECONE_REGION="us-east-1"
 DATA_DIRECTORY="./data/documents"
 LOG_LEVEL="INFO"
