--- a/env.example
+++ b/env.example
@@ -6,9 +6,7 @@ OPENAI_API_KEY="sk-please-set-me"
 OPENAI_API_BASE=""
 OPENAI_MODEL="gpt-4o-mini"
 OPENAI_EMBEDDING_MODEL="text-embedding-3-small"
-PINECONE_API_KEY=""
-PINECONE_INDEX_NAME="bplus-rag"
-PINECONE_CLOUD="aws"
-PINECONE_REGION="us-east-1"
+CHROMA_PERSIST_DIRECTORY="./data/chroma"
+CHROMA_COLLECTION_NAME="bplus-rag"
 DATA_DIRECTORY="./data/documents"
 LOG_LEVEL="INFO"
