--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,7 @@ uvicorn = {extras = ["standard"], version = "^0.30.6"}
 langchain = "^0.3.7"
 langchain-community = "^0.3.7"
 langchain-openai = "^0.3.11"
-langchain-pinecone = "^0.2.6"
-pinecone = "6.0.1"
+chromadb = "^0.5.11"
 pydantic-settings = "^2.6.1"
 python-dotenv = "^1.0.1"
 pypdf = "^5.1.0"
