Implement basic RAG pipeline with FastAPI, LangChain, and ChromaDB
- Introduced a new project structure with separate directories for backend and frontend.
- Added core application files including FastAPI entry point, API routes for health check, document upload, and chat interactions.
- Implemented environment configuration with a new env.example file detailing required variables.
- Enhanced README.md to provide comprehensive setup instructions and project overview.
- Integrated Chroma for document storage and retrieval, with support for PDF and text file uploads.
- Established logging configuration for improved monitoring and debugging.

--- a/backend/env.example
+++ b/backend/env.example
@@ -1,5 +1,5 @@
-APP_NAME="BiasharaPlus RAG API"
-APP_DESCRIPTION="RAG over BiasharaPlus docs using FastAPI, LangChain, ChromaDB, OpenAI."
+APP_NAME="Basic RAG Pipeline"
+APP_DESCRIPTION="RAG over your documents using FastAPI, LangChain, ChromaDB, and OpenAI."
 APP_VERSION="0.1.0"
 APP_AUTHOR="iPF Softwares"
 OPENAI_API_KEY="sk-please-set-me"
