Implement authentication and admin features in FastAPI and Next.js
- Added user authentication routes including login and user information retrieval.
- Implemented JWT token generation and password hashing for secure authentication.
- Created an admin dashboard for document management with upload capabilities.
- Enhanced frontend with login and signup forms, and integrated theme toggling.
- Updated environment configuration to include authentication settings and database URL.
- Improved API structure with new dependencies for security and database management.

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,6 +19,9 @@ pydantic-settings = "^2.6.1"
 python-dotenv = "^1.0.1"
 pypdf = "^5.1.0"
 python-multipart = "^0.0.12"
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+sqlalchemy = "^2.0.35"
 
 [tool.poetry.group.dev.dependencies]
 httpx = "^0.28.0"
