--- a/backend/env.example
+++ b/backend/env.example
@@ -12,3 +12,29 @@ CHROMA_DATABASE="./data/chroma"
 CHROMA_COLLECTION_NAME="bplus-rag"
 DATA_DIRECTORY="./data/documents"
 LOG_LEVEL="INFO"
+
+# LangSmith tracing (optional - for LangChain observability)
+# Get your API key from https://smith.langchain.com/
+# You can use either LANGCHAIN_* or LANGSMITH_* variable names
+LANGCHAIN_TRACING_V2="false"
+LANGCHAIN_API_KEY=""
+LANGCHAIN_PROJECT="basic-rag-pipeline"
+LANGCHAIN_ENDPOINT="https://api.smith.langchain.com"
+
+# Alternative naming (also supported):
+# LANGSMITH_TRACING="true"
+# LANGSMITH_API_KEY="your-api-key"
+# LANGSMITH_PROJECT="your-project-name"
+# LANGSMITH_ENDPOINT="https://api.smith.langchain.com"
+
+# Authentication
+SECRET_KEY="change-this-secret-key-in-production-use-a-random-string"
+ALGORITHM="HS256"
+ACCESS_TOKEN_EXPIRE_MINUTES=1440
+
+# Default admin user (created on startup if doesn't exist)
+ADMIN_EMAIL="admin@example.com"
+ADMIN_PASSWORD="admin123"
+
+# Database
+DATABASE_URL="sqlite:///./data/users.db"
