Refactor project structure and update dependencies for RAG Pipeline
- Introduced .python-version file to specify Python version 3.12.
- Updated project name and description in env.example and pyproject.toml for clarity.
- Added main.py as the entry point for the application with a simple greeting function.
- Removed poetry.lock file and replaced Zvec with ChromaDB in vector store implementation.
- Enhanced README.md to reflect project updates and provide clearer instructions.
- Adjusted logging configuration and application metadata for consistency across the project.

--- a/env.example
+++ b/env.example
@@ -1,9 +1,8 @@
-APP_NAME="Basic RAG Pipeline"
-APP_DESCRIPTION="RAG over your documents using FastAPI, LangChain, Zvec, and OpenAI."
+APP_NAME="RAG Pipeline"
+APP_DESCRIPTION="Retrieval-Augmented Generation pipeline over your documents using FastAPI, LangChain, Zvec, and OpenAI."
 APP_VERSION="0.1.0"
 APP_AUTHOR="iPF Softwares"
 OPENAI_API_KEY="sk-please-set-me"
-OPENAI_API_BASE=""
 OPENAI_MODEL="gpt-4o-mini"
 OPENAI_EMBEDDING_MODEL="text-embedding-3-small"
 ZVEC_DATABASE="./data/zvec"
