--- a/.gitignore
+++ b/.gitignore
@@ -194,6 +194,13 @@ cython_debug/
 # PyPI configuration file
 .pypirc
 
+# Docker
+.dockerignore
+
+# Data directories (comment out if you want to version control sample data)
+data/
+!data/.gitkeep
+
 # Cursor
 #  Cursor is an AI-powered code editor. `.cursorignore` specifies files/directories to
 #  exclude from AI features like autocomplete and code analysis. Recommended for sensitive data
