--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,10 @@ dependencies = [
     "fastapi>=0.104.0",
     "pydantic>=2.0.0",
     "pydantic-settings>=2.0.0",
-    "langchain>=0.1.0",
+    "langchain>=0.2.0,<0.3.0",
     "langchain-openai>=0.1.0",
-    "langchain-core>=0.1.0",
+    "langchain-core>=0.2.0,<0.3.0",
+    "langchain-text-splitters>=0.2.0",
     "zvec>=0.1.0",
     "pypdf>=4.0.0",
     "python-multipart>=0.0.6",
